# willmatthews.xyz

./: .gitignore  .gitmodules  DateFormat.hs  Main.hs  README.md  Taskfile.yml  build.sh  hblog.cabal  site.hs  stack.yaml  update.sh  willmatthews-xyz.cabal
.github/workflows/: version.yml
sass/: _headerfooter.scss  main.scss
scripts/: check-dependencies.sh  install-dependencies.sh
scss/: _button.scss  _callout.scss  _code.scss  _containers.scss  _headerfooter.scss  _image.scss  _inlinecode.scss  _list.scss  _metadata.scss  _pill.scss  _poem.scss  _post.scss  _reference.scss  _selection.scss  _variables.scss  main.scss
templates/: 404.html  archive.html  default.html  footer.html  header.html  post-list.html  post.html
typescript/: main.ts
