name:               willmatthews-xyz
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , hakyll-sass == 0.2.4
                  , time == 1.9.*
                  , containers == 0.6.2.1

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010